First install of React via Vite

--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -67,7 +67,7 @@ body {
     width: 100%;
     color: #fff;
     margin-bottom: 7px;
-    font-family: "ralewaylight", sans-serif;
+    font-family: Avenir, "ralewaylight", sans-serif;
     font-size: 20px;
 }
 
