--- a/frontend/public/4ktv.css
+++ b/frontend/public/4ktv.css
@@ -23,6 +23,12 @@
     font-size: 4em;
 }
 
+.fullwidth-title-bar{
+    font-size: 90px;
+    padding-bottom: 20px;
+    margin: 100px 0 50px 0;
+}
+
 .fixture-card{
     border-radius: 20px;
     padding: 30px 0 20px 0;
