--- a/frontend/public/basesizes.css
+++ b/frontend/public/basesizes.css
@@ -22,6 +22,12 @@
     font-size: 24px;
 }
 
+.fullwidth-title-bar{
+    font-size: 90px;
+    padding-bottom: 20px;
+    margin: 100px 0 50px 0;
+}
+
 .fixture-card{
     border-radius: 10px;
     padding: 10px 0;
