--- a/frontend/public/basesizes.css
+++ b/frontend/public/basesizes.css
@@ -23,9 +23,9 @@
 }
 
 .fullwidth-title-bar{
-    font-size: 90px;
-    padding-bottom: 20px;
-    margin: 40px 0 50px 0;
+    font-size: 30px;
+    padding-bottom: 10px;
+    margin: 0 0 11px 0;
 }
 
 .fixture-card{
