--- a/frontend/public/4ktv.css
+++ b/frontend/public/4ktv.css
@@ -2,6 +2,21 @@
     padding: 0 50px;
 }
 
+h1 {
+    font-size: 6em;
+    margin-bottom: 1em;
+}
+
+h2 {
+    font-size: 5em;
+    margin-bottom: 0.8em;
+}
+
+p {
+    margin-bottom: 0.5em;
+    font-size: 3.5em;
+}
+
 #banner{
     padding: 20px 0 10px 0;
     display: none;
@@ -12,6 +27,7 @@
 }
 
 #fixtures{
+    margin-top: 5em;
 }
 
 .fixture{
