--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -39,7 +39,7 @@ body {
     margin: 0;
     padding: 0;
     overscroll-behavior: none;
-    font-size: 18px;
+    font-size: 100%;
 }
 
 #banner{
@@ -73,7 +73,6 @@ h2 {
 p {
     font-family: "Avenir light", sans-serif;
     color: #ffffff;
-    margin-bottom: 1.2em;
 }
 
 #fixtures{
