styling. reordered matches

--- a/frontend/public/basesizes.css
+++ b/frontend/public/basesizes.css
@@ -4,7 +4,7 @@
 
 h1 {
     font-size: 1.7em;
-    margin-bottom: 15px;
+    margin-bottom: 1.1em;
 }
 
 h2 {
@@ -13,7 +13,7 @@ h2 {
 }
 
 p {
-    margin-bottom: 1em
+    margin-bottom: 0.5em
 }
 
 #banner{
@@ -44,7 +44,7 @@ p {
 
 .fixture-card{
     border-radius: 10px;
-    padding: 10px 0;
+    padding: 20px 0 10px 0;
 }
 
 .fixture-card-wrap{
