--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -194,11 +194,11 @@ p {
 .scores .point {
 }
 
+.fixture:last-of-type {
+    margin-bottom: 70px;
+}
 
-.desc {
-    color: #ccc;
-    /*background-color: rgba(0, 0, 0, 0.9);*/
-    border-radius: 4px;
-    padding: 10px;
-    clear: left;
+.rights-notice{
+    margin-top: 100px;
+    color: #d0d0d0;
 }
