--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -103,9 +103,11 @@ p {
 }
 
 .fixture-card{
-    background-color: #fff;
     float: left;
     width: 100%;
+    display: flex;
+    justify-content: center;
+    background-color: #fff;
 }
 
 .fixture-card-wrap{
@@ -121,7 +123,7 @@ p {
 }
 
 .fixture-status .duration{
-    text-align: center;
+    /*text-align: center;*/
 }
 
 .fixture-name{
@@ -134,7 +136,9 @@ p {
     float: left;
     width: 100%;
     clear: left;
-    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 .teama{
 }
@@ -142,17 +146,15 @@ p {
 }
 
 .players {
+    display: flex;
     float: left;
+    flex-direction: column;
+    justify-content: center;
+    /*background: #3a768f;*/
 }
 
 .player{
-    float: left;
-    width: 100%;
     font-family: "ralewayregular", Avenir, sans-serif;
-}
-.player.doubles{
-}
-.player img {
 }
 
 .seed{
@@ -165,16 +167,7 @@ p {
 
 .scores{
     float: left;
-}
-
-.teama .scores {
-    position: absolute;
-    right: 0;
-}
-
-.teamb .scores {
-    position: absolute;
-    right: 0;
+    /*background: #666666;*/
 }
 
 .scores span {
@@ -198,7 +191,7 @@ p {
     margin-bottom: 70px;
 }
 
-.rights-notice{
-    margin-top: 100px;
+div.footer p {
+    font-family: "Avenir light", sans-serif;
     color: #d0d0d0;
 }
